--- a/package.json
+++ b/package.json
@@ -1,16 +1,32 @@
 {
-    "name": "@krong/oceanex_lib",
-    "version": "0.0.1",
-    "description": "Simple library to communicate with OceanEx API",
-    "license": "MIT",
-    "repository": "krong/oceanex_lib",
-    "main": "server.js",
-    "keywords": [
-        "oceanex",
-        "trading",
-        "package"
-    ],
-    "dependencies": {
-        "axios": "^0.19.0"
-    }
+  "name": "@krong/oceanex_lib",
+  "version": "0.0.1",
+  "description": "Simple library to communicate with OceanEx API",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/krong/oceanex_lib.git"
+  },
+  "main": "server.js",
+  "keywords": [
+    "oceanex",
+    "trading",
+    "package"
+  ],
+  "dependencies": {
+    "axios": "^0.19.0"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "test": "mocha"
+  },
+  "bugs": {
+    "url": "https://github.com/krong/oceanex_lib/issues"
+  },
+  "homepage": "https://github.com/krong/oceanex_lib#readme",
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2"
+  },
+  "author": "Tibor Szabo"
 }
