--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "package"
   ],
   "dependencies": {
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "jsonwebtoken": "^8.5.1"
   },
   "scripts": {
     "start": "node server.js",
