--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   ],
   "dependencies": {
     "axios": "^0.19.0",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "axios-extensions": "*"
   },
   "scripts": {
     "start": "node server.js",
