--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "jsonwebtoken": "^8.5.1",
-    "axios-extensions": "*",
+    //"axios-extensions": "*",
     "https": "*",
     "http": "*"
   },
