--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^0.19.0",
     "jsonwebtoken": "^8.5.1",
     "https": "*",
-    "http": "*"
+    "http": "*",
+    "minimist": ">=0.2.1"
   },
   "scripts": {
     "start": "node server.js",
