--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   ],
   "dependencies": {
     "axios": "^0.19.0",
-    "jsonwebtoken": "^8.5.1",
-    "https": "*",
     "http": "*",
-    "minimist": ">=0.2.1"
+    "https": "*",
+    "jsonwebtoken": "^8.5.1",
+    "minimist": ">=0.2.1",
+    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v17.4.0"
   },
   "scripts": {
     "start": "node server.js",
